<resources>
    <string name="app_name">Final_is2</string>
    <string name="encabezado">TREKKCOLOMBIA</string>
    <string name="buscar">BUSCAR</string>
    <string name="icon_buscar">icon_buscar</string>
    <string name="para_ti">Para ti</string>
    <string name="videos">Videos</string>
    <string name="rutas">Rutas</string>
    <string name="agencias">Guias</string>
    <string name="screen_parati">Estas en la pantalla de "para ti"</string>
    <string name="screen_videos">Estas en la pantalla de "videos"</string>
    <string name="screen_agencias">Estas en la pantalla de "agencias"</string>
    <string name="screen_rutas">Estas en la pantalla de "rutas"</string>

    //Registro
    <string name="registro">REGISTRO</string>
    <string name="nombre">Nombre Completo</string>
    <string name="nombreuser">Nombre De Usuario</string>
    <string name="Contra">Contraseña</string>
    <string name="confircontra">Confirmar Contraseña</string>
    <string name="Correo">Correo Electronico</string>
    <string name="celular">Celular</string>
    <string name="Fechnaci">Fecha De Nacimiento</string>
    <string name="btnregistro">Registrarse</string>
    <string name="ingresar">Ingresar</string>

    //Reacciones
    <string name="like">Me gusta</string>
    <string name="dislike">No me gusta</string>
    <string name="follow">Seguir</string>

    //Rutas
    <string name="sachica">CAMINATA DE SACHICA</string>

    //Guias
    <string name="horaMensaje">18:30</string>
    <string name="nombrePersona">Juan José Munera</string>
    <string name="ultimoMensaje">Bienvenido al equipo</string>
    <string name="nombreAgente">Nombre</string>
    <string name="mensaje">Agencia</string>
    <string name="telefono">Telefono</string>
    <string name="numeroTelefono">+573145673421</string>
    <string name="pais">Ciudad</string>
    <string name="nombrePais">Inglaterra</string>

    //PerfilConfig
    <string name="Profile">Profile</string>
    <string name="Username">Username</string>
    <string name="First_name">First Name</string>
    <string name="Last_name">Last name</string>
    <string name="Email">Email</string>
    <string name="Account">Account</string>
    <string name="btnChangePassword">Change Password</string>
    <string name="btnExit">Exit</string>
    <string name="UsernameDB">admin</string>
    <string name="First_nameDB">Tony</string>
    <string name="Last_nameDB">Stark</string>
    <string name="EmailDB">starkindustrys@avengers.com</string>
    <string name="btnperfilConf">Perfil</string>

</resources>