<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/Thistle"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/titulo">

        </ImageView>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/para_ti"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/para_ti"
                android:backgroundTint="@color/white"
                android:textColor="@color/black"
                android:text="@string/para_ti">

            </Button>
            <Button
                android:layout_width="wrap_content"
                android:text="@string/videos"
                android:id="@+id/videos"
                android:backgroundTint="@color/white"
                android:textColor="@color/black"
                android:layout_height="wrap_content">
            </Button>
            <Button
                android:layout_width="wrap_content"
                android:text="@string/rutas"
                android:id="@+id/rutas"
                android:backgroundTint="@color/white"
                android:textColor="@color/black"
                android:layout_height="wrap_content">
            </Button>
            <Button
                android:layout_width="wrap_content"
                android:text="@string/agencias"
                android:id="@+id/agencias"
                android:backgroundTint="@color/white"
                android:textColor="@color/black"
                android:layout_height="wrap_content">
            </Button>
        </LinearLayout>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imagen"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:src="@drawable/img"
            android:layout_width="200dp"
            android:layout_height="200dp">

        </de.hdodenhof.circleimageview.CircleImageView>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/nombre"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </TextView>

            <TextView
                android:id="@+id/textoNombre"
                android:textSize="26sp"
                android:textStyle="bold"
                android:text="@string/nombrePersona"
                android:textColor="@color/purple_200"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </TextView>

        </LinearLayout>


        <LinearLayout
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/mensaje"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </TextView>

            <TextView
                android:id="@+id/textoMensaje"
                android:textAlignment="center"
                android:textColor="@color/purple_200"
                android:textStyle="italic"
                android:textSize="26sp"
                android:text="@string/ultimoMensaje"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/telefono"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </TextView>

            <TextView
                android:id="@+id/telefono"
                android:text="@string/numeroTelefono"
                android:textColor="@color/purple_200"
                android:textStyle="bold"
                android:textSize="26sp"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </TextView>

        </LinearLayout>


        <LinearLayout
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/pais"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </TextView>

            <TextView
                android:id="@+id/pais"
                android:textAlignment="center"
                android:text="@string/nombrePais"
                android:textColor="@color/purple_200"
                android:textStyle="bold"
                android:textSize="26sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </TextView>
        </LinearLayout>

    </LinearLayout>


</LinearLayout>