<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/Thistle"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/titulo"></ImageView>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:background="#99a7a8"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imagen"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/usuario"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"/>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/Profile"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:background="#99a7a8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </TextView>

            <Space
                android:layout_width="match_parent"
                android:layout_height="25dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Username"
                    android:textColor="@color/black"
                    android:textSize="25sp">

                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/UsernameDB"
                    android:textColor="@color/black"
                    android:textSize="20sp">

                </TextView>

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/First_name"
                    android:textColor="@color/black"
                    android:textSize="25sp">

                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/First_nameDB"
                    android:textColor="@color/black"
                    android:textSize="20sp">

                </TextView>

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Last_name"
                    android:textColor="@color/black"
                    android:textSize="25sp">

                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Last_nameDB"
                    android:textColor="@color/black"
                    android:textSize="20sp">

                </TextView>

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Email"
                    android:textColor="@color/black"
                    android:textSize="25sp">

                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/EmailDB"
                    android:textColor="@color/black"
                    android:textSize="20sp">

                </TextView>

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp"/>

            <TextView
                android:text="@string/Account"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:background="#99a7a8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </TextView>

            <Space
                android:layout_width="match_parent"
                android:layout_height="25dp"/>



            <Button
                android:id="@+id/Exit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/btnExit"
                android:backgroundTint="@color/white"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:text="@string/btnExit">

            </Button>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"/>





        </LinearLayout>


    </LinearLayout>

</ScrollView>
