<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="end"
    android:background="@color/LightGreen"
    android:orientation="vertical"
    tools:context=".registro">

    <TextView
        android:id="@+id/viewnombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/DarkGreen"
        android:gravity="center"
        android:text="@string/registro"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imagen1"
            android:layout_width="83dp"
            android:layout_height="wrap_content"
            android:src="@drawable/usuario" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="74dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/nombre" />

        <EditText
            android:id="@+id/txtnombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="71dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imagen2"
            android:layout_width="83dp"
            android:layout_height="wrap_content"
            android:src="@drawable/usuario" />

        <TextView
            android:id="@+id/viewusuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/nombreuser" />

        <EditText
            android:id="@+id/txtusuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text"
            android:minHeight="48dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="71dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imagen3"
            android:layout_width="83dp"
            android:layout_height="wrap_content"
            android:src="@drawable/candado2" />

        <TextView
            android:id="@+id/viewcontrasena"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/Contra" />

        <EditText
            android:id="@+id/txtcontrasena"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPassword" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="71dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imagen4"
            android:layout_width="83dp"
            android:layout_height="wrap_content"
            android:src="@drawable/candado2" />

        <TextView
            android:id="@+id/viewconfircontra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/confircontra" />

        <EditText
            android:id="@+id/txtconfircontra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPassword" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="71dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imagen5"
            android:layout_width="83dp"
            android:layout_height="wrap_content"
            android:src="@drawable/email" />

        <TextView
            android:id="@+id/viewemail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/Correo" />

        <EditText
            android:id="@+id/txtemail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textEmailAddress" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="71dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imagen6"
            android:layout_width="83dp"
            android:layout_height="wrap_content"
            android:src="@drawable/celular" />

        <TextView
            android:id="@+id/viewcelular"
            android:layout_width="69dp"
            android:layout_height="44dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/celular" />

        <EditText
            android:id="@+id/txtcelular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="71dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imagen7"
            android:layout_width="83dp"
            android:layout_height="wrap_content"
            android:src="@drawable/fecha" />

        <TextView
            android:id="@+id/viewfecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/Fechnaci" />

        <EditText
            android:id="@+id/txtfecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="date" />

    </LinearLayout>

    <Button
        android:id="@+id/btnregitro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnregistro"
        android:textSize="24sp" />
</LinearLayout>