<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Thistle"
    android:orientation="vertical"
    tools:context=".ListAdapter">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imagenPerfil"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="20dp"
                android:src="@drawable/img">

            </de.hdodenhof.circleimageview.CircleImageView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/nombrePersona"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nombrePersona"
                    android:textColor="@color/purple_200"
                    android:textSize="16sp"
                    android:textStyle="bold">

                </TextView>

                <TextView
                    android:id="@+id/ultimoMensaje"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textSize="14sp"
                    android:text="@string/ultimoMensaje">

                </TextView>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/horaMensaje"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/horaMensaje"
            android:padding="15dp"
            android:layout_alignParentRight="true">

        </TextView>

    </RelativeLayout>

</LinearLayout>